# civs-haskell

./: .gitignore  README.md  civs-haskell.cabal  civs.hs  run.sh
Civs/: Civs.hs  Graphics.hs  Model.hs  Pickle.hs  civs.hs
languages/: citynames_ch.txt  citynames_de.txt  citynames_eg.txt  citynames_es.txt  citynames_fr.txt  citynames_it.txt  citynames_jp.txt  citynames_pl.txt
src/Civs/: Base.hs  Civs.hs  ConsoleExplorer.hs  Model.hs  Pickle.hs  Simulation.hs
src/Civs/UI/: Screen.hs
test/Civs/: MainTest.hs  ModelTest.hs
