name:                civs-haskell
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            Todo
description:
  TBW
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Federico Tomassetti
maintainer:          f.tomassetti@gmail.com
build-type:          Simple

executable civs
  main-is:           Civs/Civs.hs
  build-depends:     base == 4.6.*,
                     --haskell2010 == 1.1.*,
                     data-binary-ieee754 == 0.4.*,
                     bytestring == 0.10.*,
                     binary == 0.5.*,
                     containers == 0.5.*,
                     JuicyPixels == 3.1.*
