name:                civs-haskell
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            Todo
description:
  TBW
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Federico Tomassetti
maintainer:          f.tomassetti@gmail.com
build-type:          Simple

executable civs
  main-is:           Civs/Civs.hs
  build-depends:     base == 4.6.*,
                     --haskell2010 == 1.1.*,
                     data-binary-ieee754 == 0.4.*,
                     bytestring == 0.10.*,
                     binary == 0.5.*,
                     containers == 0.5.*,
                     JuicyPixels == 3.1.*,
                     namegen-haskell >= 0.1,
                     random >= 1.0,
                     ansi-terminal >= 0.6,
                     matrix >= 0.3,
                     terminal-size,
                     stm
  hs-source-dirs:  src

Test-Suite unit-tests
    type:          exitcode-stdio-1.0
    main-is:       Civs/MainTest.hs
    hs-source-dirs:  src
                     ,test
    build-depends: base
                 , Cabal
                 , HTF == 0.12.*
                 , namegen-haskell >= 0.1
                 , random >= 1.0
                 , containers == 0.5.*
                 , data-binary-ieee754 == 0.4.*
                 , bytestring == 0.10.*
                 , binary == 0.5.*
                 , stm
